[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
git_describe_command= 'git describe --tags --abbrev=0 --dirty --match "v*"'
tag_regex = "v(?P<version>.*)$"
fallback_version = "0.0.0"
version_file = "src/py-project/_py_project_version.py"

[project]
name = "py-project"
dynamic = ["version"]
description = "Description"
readme = "README.md"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pre-commit",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "PLC", "PLE", "PLW", "I", "UP"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
